Add favicon links to all pages

--- a/531.html
+++ b/531.html
@@ -19,6 +19,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="manifest.json">
     <link rel="canonical" href="https://loadmybar.com/531.html">
+    <link rel="icon" type="image/svg+xml" href="icons/icon.svg">
+    <link rel="apple-touch-icon" href="icons/icon-192.png">
     <link rel="stylesheet" href="styles/shared.css">
     <meta property="og:title" content="5/3/1 Calculator | LoadMyBar">
     <meta property="og:description" content="Complete Wendler 5/3/1 program with plates for every set.">
