--- a/guides/plate-colors.html
+++ b/guides/plate-colors.html
@@ -17,6 +17,8 @@
     <meta name="theme-color" content="#0d1117">
     <link rel="manifest" href="../manifest.json">
     <link rel="canonical" href="https://loadmybar.com/guides/plate-colors.html">
+    <link rel="icon" type="image/svg+xml" href="../icons/icon.svg">
+    <link rel="apple-touch-icon" href="../icons/icon-192.png">
     <link rel="stylesheet" href="../styles/shared.css">
     <meta property="og:title" content="Olympic Plate Colors Guide | LoadMyBar">
     <meta property="og:description" content="The complete guide to competition weight plate colors and standards.">
