--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <meta name="apple-mobile-web-app-title" content="LoadMyBar">
     <link rel="manifest" href="manifest.json">
     <link rel="canonical" href="https://loadmybar.com/">
+    <link rel="icon" type="image/svg+xml" href="icons/icon.svg">
+    <link rel="apple-touch-icon" href="icons/icon-192.png">
     <link rel="stylesheet" href="styles/shared.css">
 
     <!-- Open Graph / Social -->
