--- a/guides/barbell-types.html
+++ b/guides/barbell-types.html
@@ -17,6 +17,8 @@
     <meta name="theme-color" content="#0d1117">
     <link rel="manifest" href="../manifest.json">
     <link rel="canonical" href="https://loadmybar.com/guides/barbell-types.html">
+    <link rel="icon" type="image/svg+xml" href="../icons/icon.svg">
+    <link rel="apple-touch-icon" href="../icons/icon-192.png">
     <link rel="stylesheet" href="../styles/shared.css">
     <meta property="og:title" content="Barbell Types Guide | LoadMyBar">
     <meta property="og:description" content="Everything you need to know about different barbells and their weights.">
