--- a/tools/one-rep-max.html
+++ b/tools/one-rep-max.html
@@ -17,6 +17,8 @@
     <meta name="theme-color" content="#0d1117">
     <link rel="manifest" href="../manifest.json">
     <link rel="canonical" href="https://loadmybar.com/tools/one-rep-max.html">
+    <link rel="icon" type="image/svg+xml" href="../icons/icon.svg">
+    <link rel="apple-touch-icon" href="../icons/icon-192.png">
     <link rel="stylesheet" href="../styles/shared.css">
     <meta property="og:title" content="1RM Calculator | LoadMyBar">
     <meta property="og:description" content="Estimate your one rep max from any weight and rep count.">
