--- a/warmup.html
+++ b/warmup.html
@@ -19,6 +19,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="manifest.json">
     <link rel="canonical" href="https://loadmybar.com/warmup.html">
+    <link rel="icon" type="image/svg+xml" href="icons/icon.svg">
+    <link rel="apple-touch-icon" href="icons/icon-192.png">
     <link rel="stylesheet" href="styles/shared.css">
     <meta property="og:title" content="Warmup Set Calculator | LoadMyBar">
     <meta property="og:description" content="Generate progressive warmup sets with exact plate breakdowns.">
